# svg2ico

./: .gitignore  README.md  setup.cfg
svg2ico/: __init__.py  __main__.py  svg2ico.py
