[metadata]
name = svg2ico
url = https://github.com/kairi003/svg2ico
version = 1.0.0
license = MIT
license_file = LICENSE
description = A SVG to Multi Size ICO Converter, without Rescale
author = kairi
author_email = kairi.satellite@gmail.com
keywords =
    svg
    converter
    ico

[options]
install_requires =
    cairosvg

[options.entry_points]
console_scripts = 
    svg2ico = svg2ico.__main__:main
